[PE-4738] Fixed Date Picker whitespace bug

--- a/src/chi/components/date-picker/date-picker.scss
+++ b/src/chi/components/date-picker/date-picker.scss
@@ -24,6 +24,10 @@ $monday-starting-week: (
   &.-disabled {
     pointer-events: none;
   }
+
+  chi-popover {
+    display: flex;
+  }
 }
 
 .chi-datepicker {
